@@ -1,126 +1,69 @@
 @echo off
-
-set MAVEN_OPTS=-Xms64m -Xmx1024m -Xss2048k -Xmn32m -XX:PermSize=64m -XX:MaxPermSize=256m
-
-:start
 cls
-echo %~dp0
+:start
 echo ------------------
-echo u. svn update
-echo i. install (no tests)
-echo e. eclipse (online)
-echo o. eclipse (offline)
-echo c. clean
-echo d. download dependencies
-echo b. rest build
-echo r. release
-echo y. update, deploy
-echo s. generate sources
-echo m. assembly
-echo t. status
+echo u. update code
+echo c. clean target
+echo p. create package
+echo s. build site
+echo d. deploy remotely
+echo r. release remotely
+echo i. install locally
+echo w. clear window
 echo q. quit
 echo ------------------
-CHOICE /N /C:uieocdbrysmtq
+CHOICE /N /C:ucpsdwriq
 set nr=%ERRORLEVEL%
-IF %nr% EQU 1 goto lsvnup
-IF %nr% EQU 2 goto llocinstall
-IF %nr% EQU 3 goto leclipse
-IF %nr% EQU 4 goto leclipseoff
-IF %nr% EQU 5 goto lclean
-IF %nr% EQU 6 goto ldependency
-IF %nr% EQU 7 goto lrest
-IF %nr% EQU 8 goto lrelease
-IF %nr% EQU 9 goto ldeploy
-IF %nr% EQU 10 goto lgen
-IF %nr% EQU 11 goto lass
-IF %nr% EQU 12 goto lstatus
-IF %nr% EQU 13 goto lquit
+IF %nr% EQU 1 goto lupdate
+IF %nr% EQU 2 goto lclean
+IF %nr% EQU 3 goto lpackage
+IF %nr% EQU 4 goto lsite
+IF %nr% EQU 5 goto ldeploy
+IF %nr% EQU 6 goto lcls
+IF %nr% EQU 7 goto lrelease
+IF %nr% EQU 8 goto linstall
+IF %nr% EQU 9 goto end
 goto start
 
-:lstatus
+:lupdate
 cls
-if exist status.bat goto lstatusbat
-svn status .
-pause
-goto start
-
-:lstatusbat
-cls
-call status.bat
-goto start
-
-:lsvnup
-cls
-if exist svnup.bat goto lsvnupbat
 svn update
-pause
-goto start
-
-:lsvnupbat
-cls
-call svnup.bat
-goto start
-
-:llocinstall
-cls
-call mvn -e install -DskipTests=true -DupdateReleaseInfo=true
-pause
-goto start
-
-:leclipse
-cls
-call mvn -e -U -DdownloadSources=true -Dwtpversion=2.0 eclipse:eclipse
-pause
-goto start
-
-:leclipseoff
-cls
-call mvn -e -U -DdownloadSources=true -Dwtpversion=2.0 eclipse:eclipse -o
-pause
 goto start
 
 :lclean
 cls
-call mvn -e clean
-pause
+call mvn clean
 goto start
 
-:ldependency
+:lpackage
 cls
-call mvn -e dependency:go-offline
-pause
+call mvn package
 goto start
 
-:lrest
+:lsite
 cls
-call mvn -e -pl be.ugent.oasis:rest-xsd -am install -DskipTests=true
-pause
-goto start
-
-:lrelease
-cls
-call mvn -e release:prepare
-call mvn -e release:perform
-pause
+call mvn site
 goto start
 
 :ldeploy
 cls
-svn update
-call mvn -e deploy
-pause
+call mvn deploy
 goto start
 
-:lgen
+:lrelease
 cls
-call mvn -e generate-sources
-pause
+call mvn release:prepare
+call mvn release:perform
 goto start
 
-:lass
+:linstall
 cls
-call mvn -o -e package assembly:assembly
-pause
+call mvn install
+goto start
 
-:lquit
+:lcls
 cls
+goto start
+
+:end
+exit
